fixing content layout shift issue

--- a/_assets/stylesheets/fonts.scss
+++ b/_assets/stylesheets/fonts.scss
@@ -10,6 +10,7 @@
 @font-face {
   font-family: 'Cormorant Garamond';
   font-style: normal;
+  font-style: block;
   font-weight: 700;
   src: asset_url('cormorant-garamond/Cormorant-Garamond-700.eot');
   src:
@@ -27,6 +28,7 @@
 @font-face {
   font-family: 'Lato';
   font-style: normal;
+  font-style: block;
   font-weight: 300;
   src: asset_url('lato/Lato-300.eot');
   src:
@@ -42,6 +44,7 @@
   font-family: 'Lato';
   font-style: normal;
   font-weight: 400;
+  font-style: block;
   src: asset_url('lato/Lato-regular.eot');
   src:
     asset_url('lato/Lato-regular.eot?#iefix') format('embedded-opentype'),
@@ -56,6 +59,7 @@
   font-family: 'Lato';
   font-style: normal;
   font-weight: 700;
+  font-style: block;
   src: asset_url('lato/Lato-700.eot');
   src:
     asset_url('lato/Lato-700.eot?#iefix') format('embedded-opentype'),
